<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/news_feed"
        android:icon="@drawable/ic_camera_rear_white_24dp"
        android:title="@string/trending" />

    <item
        android:id="@+id/photo_navi"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/title_newsfeed" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/series" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_grey"
        android:title="@string/title_more" />
    <!--<item-->
    <!--android:id="@+id/navigation_notifications"-->
    <!--android:icon="@drawable/ic_notifications_black_24dp"-->

    <!--android:title="@string/title_more"-->

    <!--/>-->

</menu>
