<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <pasu.vadivasal.view.TextView
        android:id="@+id/tvNewsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:asset_font_file_name="@string/font_sourcesans_pro_semibold"
        android:text=""
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/sp_18" />

    <pasu.vadivasal.view.TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:asset_font_file_name="@string/font_sourcesans_pro_italic"
        android:text=""
        android:textColor="@color/gray_text"
        android:textSize="@dimen/sp_16" />

    <pasu.vadivasal.view.TextView
        android:id="@+id/tvNewsDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:asset_font_file_name="@string/font_sourcesans_pro_regular"
        android:text=""
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/sp_16" />
</LinearLayout>
