<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minWidth="300dp"
        android:orientation="vertical">

        <pasu.vadivasal.view.TextView
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:paddingLeft="@dimen/x_large_padding"
            android:paddingRight="@dimen/x_large_padding"
            android:paddingTop="@dimen/large_padding"
            android:text="5235"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_20"
            app:asset_font_file_name="@string/font_roboto_slab_regular" />

        <pasu.vadivasal.view.TextView
            android:id="@+id/txt_mesg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_phone"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingBottom="@dimen/large_padding"
            android:text="@string/number_correct"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_14"
            android:visibility="visible"
            app:asset_font_file_name="@string/font_sourcesans_pro_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_mesg"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <pasu.vadivasal.view.TextView
                android:id="@+id/dialog_txt_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1.0"
                android:background="@color/background_color"
                android:gravity="center"
                android:padding="@dimen/medium_padding"
                android:text="@string/btn_edit"
                android:textAllCaps="true"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/x_small_text"
                app:asset_font_file_name="@string/font_sourcesans_pro_regular" />

            <pasu.vadivasal.view.TextView
                android:id="@+id/dialog_txt_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/green_background_color"
                android:gravity="center"
                android:padding="@dimen/medium_padding"
                android:text="@string/btn_yes"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/x_small_text"
                app:asset_font_file_name="@string/font_sourcesans_pro_regular" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
