<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pad_5dp">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_10dp">

        <pasu.vadivasal.view.CircleImageView
            android:id="@+id/alert_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp" />

        <pasu.vadivasal.view.TextView
            android:id="@+id/alert_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_20"
            app:asset_font_file_name="@string/font_roboto_slab_bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider" />

    <pasu.vadivasal.view.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/register_me"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/sp_18"
        app:asset_font_file_name="@string/font_roboto_slab_bold" />

    <LinearLayout
        android:id="@+id/alert_register_bull_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/gray_text"
            app:srcCompat="@drawable/ic_bull_logo" />

        <pasu.vadivasal.view.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register_bull_owner"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_16"
            app:asset_font_file_name="@string/font_sourcesans_pro_semibold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alert_register_tamper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/gray_text"
            app:srcCompat="@drawable/ic_player_tshirts" />

        <pasu.vadivasal.view.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register_tamper"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_16"
            app:asset_font_file_name="@string/font_sourcesans_pro_semibold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alert_register_photographer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/gray_text"
            app:srcCompat="@drawable/ic_photo_camera" />

        <pasu.vadivasal.view.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register_photographer"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_16"
            app:asset_font_file_name="@string/font_sourcesans_pro_semibold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alert_logout_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/gray_text"
            app:srcCompat="@drawable/ic_logout" />

        <pasu.vadivasal.view.TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/logout"

            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_16"
            app:asset_font_file_name="@string/font_sourcesans_pro_semibold" />
    </LinearLayout>
</LinearLayout>