<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_24">

        <pasu.vadivasal.view.TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="Title"
            android:textColor="@color/red_text"
            android:textSize="@dimen/sp_20"
            app:asset_font_file_name="@string/font_roboto_slab_regular" />

        <pasu.vadivasal.view.TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_16"
            app:asset_font_file_name="@string/font_sourcesans_pro_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="gone">

            <pasu.vadivasal.view.Button
                android:id="@+id/btnNegative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_24"
                android:background="?attr/selectableItemBackground"
                android:text="NO"
                android:textAllCaps="true"
                android:textColor="@color/sign_up_text_light"
                android:textSize="@dimen/sp_14"
                app:asset_font_file_name="@string/font_sourcesans_pro_semibold" />

            <pasu.vadivasal.view.Button
                android:id="@+id/btnPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="YES"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_14"
                app:asset_font_file_name="@string/font_roboto_slab_regular" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
